Новые тесты для импортов